# self_chatbot

./: .gitignore  README.md  pyproject.toml  pytest.ini  settings.py
app/: main.py
app/models/: __init__.py
app/router/: chat.py  conversation.py  health.py
app/service/: database.py
app/service/llm/: base.py  deepseek.py  factory.py  ollama.py  retry.py  test_deepseek.py  test_ollama.py
app/util/: logging.py
test/: conftest.py  test_chat.py  test_health.py
