[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "ollama>=0.6.1",
    "openai>=2.29.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
